# solana-reddit-dapp

./: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
anchor/: Anchor.toml  package.json
anchor/programs/reddit/: Cargo.toml
anchor/programs/reddit/src/: lib.rs
anchor/src/: index.ts  reddit-exports.ts
anchor/tests/: reddit.spec.ts
web/app/: layout.tsx
web/app/reddit/: page.tsx
web/components/reddit/: reddit-data-access.tsx  reddit-feature.tsx  reddit-ui.tsx
